# Call-Agent

./: .env.example  .gitignore  README.md  pyproject.toml  railway.toml  requirements.txt
app/: agent.py  flow.json  interruption_manager.py  llm_client.py  main.py  stt.py  system_prompt.txt  tts.py  websocket_twillio.py
app/data/: dummy_dta.py
app/tools/: reservation_tools.py
